fix(html) : Fix losing stats link when changing text spacing
Fix 1.4.12 for #3654

--- a/css/share.css
+++ b/css/share.css
@@ -27,9 +27,6 @@ div.share {
 	overflow:hidden;
 	vertical-align:-2px;
 }
-#copybox {
-	width:250px;
-}
 #sharebox {
 	width:500px;
 }
